# mvh_analysis

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
examples/: config_example.py  example_titration.csv  run_example.py  run_experiment.py
mvh_analysis/: Experiment.py  Titration.py  __init__.py  config.py  data_prep.py  df_prep.py  io.py  main.py  mghee_von_hippel.py  plot.py  print_mvh.py
mvh_analysis.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
