[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mvh_analysis"
version = "0.1.0"
description = "Workflow for McGhee–von Hippel analysis of titration curves"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }

authors = [
    { name = "João Luiz Petrarca de Albuquerque" }
]

dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "scipy"          
]

[project.urls]
Homepage = "https://github.com/joaoluizpetrarca/mvh_analysis"
Documentation = "https://github.com/joaoluizpetrarca/mvh_analysis"
Issues = "https://github.com/joaoluizpetrarca/mvh_analysis/issues"
